--- a/code/index.html
+++ b/code/index.html
@@ -21,27 +21,32 @@
 			<!-- Top Section -->
 
 			<header>
-				<div class="hero-image"></div>
-			</header>
-
-      <section class="top-section">
-				<div class="top-textblock">
-          <h4><span class="light">Portfolio: </span>Ebba Delsol</h4>
+        <div class="top-icons-container">
+          <img class="top-icons" src="../images/icons/linkedin.svg" alt="linkedin-icon">
+          <img class="top-icons" src="../images/icons/github.svg" alt="github-icon">
+          <img class="top-icons" src="../images/icons/stackoverflow.svg" alt="stackoverflow-icon">
+        </div>
+        <img class="hero-image" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="placeholder-image">
+        <section class="top-section">
+          <h4 class="kicker">Portfolio: <span class="bold">Ebba Delsol</h4>
           <h1 class="big-heading">frontend developer <!--<span class="smaller-heading"> with fullstack ambitions</span>--></h1>
-				</div>
-      </section>
+          <div class="profile-container">
+            <img class="profile-picture" src="../images/portrait.jpg" alt="profile-picture">
+          </div>
+        </section>
+      </header>
 
 			<!-- Summery Section -->
 
       <section class="summery-section">
-        <p class="intro-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit voluptate amet veniam iste, saepe voluptates similique possimus harum fugit corporis vel non ratione veritatis maiores aspernatur atque dicta nulla beatae.</p>
+        <p class="intro-text"><span class="line"></span><span class="dot"></span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit voluptate amet veniam iste, saepe voluptates similique possimus harum fugit corporis vel non ratione veritatis maiores aspernatur atque dicta nulla beatae.</p>
       </section>
 
 			<!-- Tech Section -->
 
       <section class="tech-section">
         <h2 class="section-headings">Tech</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nulla quam dicta velit recusandae assumenda similique nesciunt impedit, fuga perferendis unde eaque necessitatibus praesentium, est beatae veniam libero, in deserunt.</p>
+				<p class="intro-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nulla quam dicta velit recusandae assumenda similique nesciunt impedit, fuga perferendis unde eaque necessitatibus praesentium, est beatae veniam libero, in deserunt.</p>
       </section>
 
 			<!-- Featured Projects Section -->
@@ -198,7 +203,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ipsa deserunt, assumenda dolor exercitationem soluta? Dignissimos porro, aliquid incidunt unde accusamus deleniti iste architecto illo omnis et exercitationem ab sapiente.</p>
           </a>
         </article>
+      </section>
 
+      <section class="sub-reflect-section">
         <div class="sub-reflections">
           <h3>More thoughts</h3>
           <article>
@@ -258,12 +265,15 @@
 
 			<!-- Footer -->
 
-			<footer>
-				<h3>Contact</h3>
-				<p>Ebba Delsol</p>
-				<p>+46 73 552 59 87</p>
-				<p>ebba.delsol@gmail.com</p>
-			</footer>
+      <section class="contact">
+			  <footer>
+				  <h3>Contact</h3>
+				  <p>Ebba Delsol</p>
+				  <p>+46 73 552 59 87</p>
+				  <p>ebba.delsol@gmail.com</p>
+			  </footer>
+      </section>
+
 
     </div>
 
