small changes css

--- a/code/index.html
+++ b/code/index.html
@@ -46,7 +46,7 @@
 
       <section class="tech-section">
         <h2 class="section-headings">Tech</h2>
-				<p class="intro-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus nulla quam dicta velit recusandae assumenda similique nesciunt impedit, fuga perferendis unde eaque necessitatibus praesentium, est beatae veniam libero, in deserunt.</p>
+				<p class="intro-text center"> HTML, CSS, Flexbox, <span class="colored">JavaScript,</span> ES6, JSX, <span class="colored">React, React Hooks, Redux,</span> Node.js, Mongo DB, Web Accessibly, API:s, mob-programming, pair-programming, Github.</p>
       </section>
 
 			<!-- Featured Projects Section -->
