fixing the section-heading

--- a/code/index.html
+++ b/code/index.html
@@ -45,14 +45,14 @@
 			<!-- Tech Section -->
 
       <section class="tech-section">
-        <h2 class="section-headings">Tech</h2>
+        <h2 class="section-headings"><span class="colored-bg">Tech</span></h2>
 				<p class="intro-text center"> HTML, CSS, Flexbox, <span class="colored">JavaScript,</span> ES6, JSX, <span class="colored">React, React Hooks, Redux,</span> Node.js, Mongo DB, Web Accessibly, API:s, mob-programming, pair-programming, Github.</p>
       </section>
 
 			<!-- Featured Projects Section -->
 
       <section class="featured-projects">
-        <h2 class="section-headings">Featured projects</h2>
+        <h2 class="section-headings"><span class="colored-bg">Featured projects</span></h2>
 
         <div class="main-project">
             <a href="#">
@@ -180,7 +180,7 @@
 			<!-- Reflection Section -->
 
       <section class="reflect-section">
-        <h2 class="section-headings">My thoughts</h2>
+        <h2 class="section-headings"><span class="colored-bg">My thoughts</span></h2>
 
         <article class="main-reflection">
           <a href="#">
@@ -220,7 +220,7 @@
 			<!-- Skills Section -->
 
       <section class="skills-section">
-				<h2 class="Skills">Skills</h2>
+				<h2 class="section-headings"><span class="colored-bg">Skills</span></h2>
         <p><span>Code</span></p>
         <ul>
           <li>HTML 5</li>
@@ -257,7 +257,7 @@
 			<!-- SoMe Section -->
 
       <section class="some-section">
-        <h2>For more</h2>
+        <h2 class="section-headings">For more</h2>
         <a href="#">Add icon and SoMe-link</a>
         <a href="#">Add icon and SoMe-link</a>
         <a href="#">Add icon and SoMe-link</a>
