--- a/code/index.html
+++ b/code/index.html
@@ -21,18 +21,16 @@
 
 		<header>
       <div class="top-icons-container">
-        <img class="top-icons" src="../images/icons/linkedin.svg" alt="linkedin-icon">
-        <img class="top-icons" src="../images/icons/github.svg" alt="github-icon">
-        <img class="top-icons" src="../images/icons/stackoverflow.svg" alt="stackoverflow-icon">
+        <img class="top-icons" src="../images/icons/linkedin.svg" alt="linkedin-icon" />
+        <img class="top-icons" src="../images/icons/github.svg" alt="github-icon" />
+        <img class="top-icons" src="../images/icons/stackoverflow.svg" alt="stackoverflow-icon" />
       </div>
-      <img class="hero-image" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="placeholder-image">
+      <img class="hero-image" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="placeholder-image" />
       <section class="top-section">
-        <h4 class="kicker">Portfolio:
-          <span class="bold">Ebba Delsol</span>
-        </h4>
+        <h4 class="kicker">Portfolio: <span class="bold">Ebba Delsol</span></h4>
         <h1 class="big-heading">frontend developer</h1>
         <div class="profile-container">
-          <img class="profile-picture" src="../images/portrait.jpg" alt="profile-picture">
+          <img class="profile-picture" src="../images/portrait.jpg" alt="profile-picture" />
         </div>
       </section>
     </header>
@@ -40,11 +38,7 @@
 		<!-- Summery Section -->
 
     <section class="summery-section">
-      <p class="intro-text">
-        <span class="line"></span>
-        <span class="dot"></span>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit voluptate amet veniam iste, saepe voluptates similique possimus harum fugit corporis vel non ratione veritatis maiores aspernatur atque dicta nulla beatae.
-      </p>
+      <p class="intro-text"><span class="line"></span><span class="dot"></span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit voluptate amet veniam iste, saepe voluptates similique possimus harum fugit corporis vel non ratione veritatis maiores aspernatur atque dicta nulla beatae.</p>
     </section>
 
 			<!-- Tech Section -->
