skills and social media section

--- a/code/index.html
+++ b/code/index.html
@@ -261,46 +261,49 @@
 
 		<section class="skills-section container">
 			<h2 class="section-heading"><span>Skills</span></h2>
-			<h6 class="skills-sub-heading">Code</h6>
-			<ul>
-				<li>HTML 5</li>
-				<li>CSS3</li>
-				<li>JavaScript ES6</li>
-				<li>GitHub</li>
-			</ul>
 
-			<h6 class="skills-sub-heading">Code</h6>
-			<ul>
-				<li>HTML 5</li>
-				<li>CSS3</li>
-				<li>JavaScript ES6</li>
-				<li>GitHub</li>
-			</ul>
+			<div class="skills-container">
+				<h4 class="skills-title">Code</h4>
+				<ul class="skills-list">
+					<li>HTML 5</li>
+					<li>CSS3</li>
+					<li>JavaScript ES6</li>
+					<li>GitHub</li>
+				</ul>
+			</div>
 
-			<h6 class="skills-sub-heading">Code</h6>
-			<ul>
-				<li>HTML 5</li>
-				<li>CSS3</li>
-				<li>JavaScript ES6</li>
-				<li>GitHub</li>
-			</ul>
+			<div class="skills-container">
+				<h4 class="skills-title">Upcoming</h4>
+				<ul class="skills-list">
+					<li>React</li>
+					<li>Redux</li>
+					<li>Node.js</li>
+				</ul>
+			</div>
 
-			<h6 class="skills-sub-heading">Code</h6>
-			<ul>
-				<li>HTML 5</li>
-				<li>CSS3</li>
-				<li>JavaScript ES6</li>
-				<li>GitHub</li>
-			</ul>
+			<div class="skills-container">
+				<h4 class="skills-title">Toolbox</h4>
+				<ul class="skills-list">
+					<li>VS Code</li>
+					<li>Adobe Photoshop</li>
+					<li>Adobe Illustrator</li>
+					<li>Adobe InDesign</li>
+					<li>Adobe After Effects</li>
+					<li>Adobe Dimension</li>
+					<li>Slack</li>
+				</ul>
+			</div>
 		</section>
 
 		<!-- SoMe Section -->
 
-		<section class="some-section container">
+		<section class="social-section container">
 			<h2 class="section-heading"><span>For more</span></h2>
-			<a href="#">Add icon and SoMe-link</a>
-			<a href="#">Add icon and SoMe-link</a>
-			<a href="#">Add icon and SoMe-link</a>
+			<div class="social-links">
+				<a href="#">Linkedin</a>
+				<a href="#">GitHub</a>
+				<a href="#">Stack Overflow</a>
+			</div>
 		</section>
 
 		<!-- Footer -->
@@ -310,8 +313,8 @@
 				<h3 class="sub-heading">Contact</h3>
 				<div class="contact-info">
 					<p>Ebba Delsol</p>
-					<p>+46 73 552 59 87</p>
 					<p>ebba.delsol@gmail.com</p>
+					<p>+46 73 552 59 87</p>
 				</div>
 			</footer>
 		</section>
