--- a/code/index.html
+++ b/code/index.html
@@ -56,7 +56,7 @@
 
 			<div class="project-wrapper">
 				<article class="main-project">
-					<div class="image-container">
+					<div class="project-img-container">
 						<a href="#">
 							<h4 class="image-title">Travelbot</h4>
 							<img class="project-image" src="https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3474&q=80" alt="placeholder-image-2" />
@@ -78,7 +78,7 @@
 				</article>
 
 				<article class="main-project">
-					<div class="image-container">
+					<div class="project-img-container">
 						<a href="#">
 							<h4 class="image-title">Travelbot</h4>
 							<img class="project-image" src="https://images.unsplash.com/photo-1618004912476-29818d81ae2e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80" alt="placeholder-image-3" />
@@ -100,7 +100,7 @@
 				</article>
 
 				<article class="main-project">
-					<div class="image-container">
+					<div class="project-img-container">
 						<a href="#">
 							<h4 class="image-title">Travelbot</h4>
 							<img class="project-image" src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80" alt="placeholder-image-4" />
@@ -122,7 +122,7 @@
 				</article>
 
 				<article class="main-project">
-					<div class="image-container">
+					<div class="project-img-container">
 						<a href="#">
 							<h4 class="image-title">Travelbot</h4>
 							<img class="project-image" src="https://images.unsplash.com/photo-1618472609777-b038f1f04b8d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80" alt="placeholder-image-5" />
@@ -214,7 +214,7 @@
 
 			<div class="reflection-wrapper">
 				<article class="main-reflection">
-					<div class="image-container">
+					<div class="reflection-img-container">
 						<a href="#">
 							<img class="reflect-image" src="https://images.unsplash.com/photo-1621839673705-6617adf9e890?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80" alt="placeholder-image-6" />
 						</a>
@@ -229,7 +229,7 @@
 				</article>
 
 				<article class="main-reflection">
-					<div class="image-container">
+					<div class="reflection-img-container">
 						<a href="#">
 							<img class="reflect-image" src="https://images.unsplash.com/photo-1620641788421-7a1c342ea42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3474&q=80" alt="placeholder-image-7" />
 						</a>
