--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
 				<img class="top-icons" src="./images/icons/github.svg" alt="github-icon" />
 				<img class="top-icons" src="./images/icons/stackoverflow.svg" alt="stackoverflow-icon" />
 			</div>
-			<img class="hero-image" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="placeholder-image-1" />
+			<img class="hero-image" src="https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2666&q=80" />
 			<section class="top-section container">
 				<h4 class="kicker">Portfolio: <span class="name">Ebba Delsol</span></h4>
 				<h1 class="big-heading">frontend developer</h1>
