--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,7 @@
 					<img class="top-icons" src="./images/icons/github.svg" alt="github icon" />
 				</a>
 			</div>
-			<img class="hero-image" src="https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2666&q=80" />
+			<img class="hero-image" src="https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2666&q=80" alt="Header image" />
 			<section class="top-section container">
 				<h4 class="kicker">Portfolio: <span class="name">Ebba Delsol</span></h4>
 				<h1 class="big-heading">frontend developer</h1>
