icons and alt attribute

--- a/code/index.html
+++ b/code/index.html
@@ -21,18 +21,18 @@
 		<header>
 			<div class="top-icons-container">
 				<a href="https://www.linkedin.com/in/ebba-delsol/" target="_blank">
-					<img class="top-icons" src="./images/icons/linkedin.svg" alt="Linkedin icon" />
+					<img class="top-icons" src="./images/icons/icon_linkedin_60px.svg" alt="Linkedin icon" />
 				</a>
 				<a href="https://stackoverflow.com/users/16669827/ebba?tab=profile" target="_blank">
-					<img class="top-icons" src="./images/icons/stackoverflow.svg" alt="Stack overflow icon" />
+					<img class="top-icons" src="./images/icons/icon_stack-overflow_60px.svg" alt="Stack Overflow icon" />
 				</a>
 				<a href="https://github.com/ebbadelsol" target="_blank">
-					<img class="top-icons" src="./images/icons/github.svg" alt="github icon" />
+					<img class="top-icons" src="./images/icons/icon_github_60px.svg" alt="Github icon" />
 				</a>
 			</div>
 			<img class="hero-image" src="https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2666&q=80" alt="Header image" />
 			<section class="top-section container">
-				<h4 class="kicker">Portfolio: <span class="name">Ebba Delsol</span></h4>
+				<p class="kicker">Portfolio: <span class="name">Ebba Delsol</span></p>
 				<h1 class="big-heading">frontend developer</h1>
 				<div class="profile-container">
 					<img class="profile-picture" src="./images/portrait.jpg" alt="Profile picture" />
@@ -65,12 +65,12 @@
 					<div class="project-img-container">
 						<a href="#" target="_blank">
 							<h4 class="image-title">Travelbot</h4>
-							<img class="project-image" src="https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3474&q=80" alt="Placeholder image 2" />
+							<img class="project-image" src="https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3474&q=80" alt="Project image" />
 						</a>
 					</div>
 					<a href="#" target="_blank">
 						<div class="text-container">
-							<h4 class="project-title">Chat bot built in javascript</h4>
+							<h5 class="project-title">Chat bot built in javascript</h5>
 							<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 						</div>
 						<div class="tag-wrapper">
@@ -87,12 +87,12 @@
 					<div class="project-img-container">
 						<a href="#" target="_blank">
 							<h4 class="image-title">Travelbot</h4>
-							<img class="project-image" src="https://images.unsplash.com/photo-1618004912476-29818d81ae2e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80" alt="Placeholder image 3" />
+							<img class="project-image" src="https://images.unsplash.com/photo-1618004912476-29818d81ae2e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80" alt="Project image" />
 						</a>
 					</div>
 					<a href="#" target="_blank">
 						<div class="text-container">
-							<h4 class="project-title">Chat bot built in javascript</h4>
+							<h5 class="project-title">Chat bot built in javascript</h5>
 							<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 						</div>
 						<div class="tag-wrapper">
@@ -109,12 +109,12 @@
 					<div class="project-img-container">
 						<a href="#" target="_blank">
 							<h4 class="image-title">Travelbot</h4>
-							<img class="project-image" src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80" alt="Placeholder image 4" />
+							<img class="project-image" src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80" alt="Project image" />
 						</a>
 					</div>
 					<a href="#" target="_blank">
 						<div class="text-container">
-							<h4 class="project-title">Chat bot built in javascript</h4>
+							<h5 class="project-title">Chat bot built in javascript</h5>
 							<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 						</div>
 						<div class="tag-wrapper">
@@ -131,12 +131,12 @@
 					<div class="project-img-container">
 						<a href="#" target="_blank">
 							<h4 class="image-title">Travelbot</h4>
-							<img class="project-image" src="https://images.unsplash.com/photo-1618472609777-b038f1f04b8d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80" alt="Placeholder image 5" />
+							<img class="project-image" src="https://images.unsplash.com/photo-1618472609777-b038f1f04b8d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80" alt="Project image" />
 						</a>
 					</div>
 					<a href="#" target="_blank">
 						<div class="text-container">
-							<h4 class="project-title">Chat bot built in javascript</h4>
+							<h5 class="project-title">Chat bot built in javascript</h5>
 							<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 						</div>
 						<div class="tag-wrapper">
@@ -157,7 +157,7 @@
 
 				<article class="sub-project">
 					<div class="text-container">
-						<h4 class="project-title">Chat bot built in javascript</h4>
+						<h5 class="project-title">Chat bot built in javascript</h5>
 						<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 					</div>
 					<div class="tag-wrapper">
@@ -171,7 +171,7 @@
 
 				<article class="sub-project">
 					<div class="text-container">
-						<h4 class="project-title">Chat bot built in javascript</h4>
+						<h5 class="project-title">Chat bot built in javascript</h5>
 						<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 					</div>
 					<div class="tag-wrapper">
@@ -185,7 +185,7 @@
 
 				<article class="sub-project">
 					<div class="text-container">
-						<h4 class="project-title">Chat bot built in javascript</h4>
+						<h5 class="project-title">Chat bot built in javascript</h5>
 						<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 					</div>
 					<div class="tag-wrapper">
@@ -199,7 +199,7 @@
 
 				<article class="sub-project">
 					<div class="text-container">
-						<h4 class="project-title">Chat bot built in javascript</h4>
+						<h5 class="project-title">Chat bot built in javascript</h5>
 						<p class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit nobis inventore aperiam illo.</p>
 					</div>
 					<div class="tag-wrapper">
@@ -222,7 +222,7 @@
 				<article class="main-reflection">
 					<div class="reflection-img-container">
 						<a href="#" target="_blank">
-							<img class="reflect-image" src="https://images.unsplash.com/photo-1621839673705-6617adf9e890?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80" alt="Placeholder image 6" />
+							<img class="reflect-image" src="https://images.unsplash.com/photo-1621839673705-6617adf9e890?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80" alt="Reflection image" />
 						</a>
 					</div>
 					<div class="text-container">
@@ -237,7 +237,7 @@
 				<article class="main-reflection">
 					<div class="reflection-img-container">
 						<a href="#" target="_blank">
-							<img class="reflect-image" src="https://images.unsplash.com/photo-1620641788421-7a1c342ea42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3474&q=80" alt="Placeholder image 7" />
+							<img class="reflect-image" src="https://images.unsplash.com/photo-1620641788421-7a1c342ea42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3474&q=80" alt="Reflection image" />
 						</a>
 					</div>
 					<div class="text-container">
@@ -270,7 +270,7 @@
 
 			<div class="skills-wrapper">
 				<div class="text-container">
-					<h4 class="skills-title">Code</h4>
+					<h5 class="skills-title">Code</h5>
 					<ul class="skills-list">
 						<li>HTML5</li>
 						<li>CSS3</li>
@@ -280,7 +280,7 @@
 				</div>
 
 				<div class="text-container">
-					<h4 class="skills-title">Toolbox</h4>
+					<h5 class="skills-title">Toolbox</h5>
 					<ul class="skills-list">
 						<li>VS Code</li>
 						<li>Adobe Photoshop</li>
@@ -293,7 +293,7 @@
 				</div>
 
 				<div class="text-container">
-					<h4 class="skills-title">Upcoming</h4>
+					<h5 class="skills-title">Upcoming</h5>
 					<ul class="skills-list">
 						<li>React</li>
 						<li>Redux</li>
@@ -310,21 +310,21 @@
 			<div class="social-container">
 				<a class="social-links" href="https://www.linkedin.com/in/ebba-delsol/" target="_blank">
 					<div class="social-icon-wrapper">
-						<img class="bottom-icons" src="./images/icons/linkedin.svg" alt="Linkedin icon" />
+						<img class="bottom-icons" src="./images/icons/icon_linkedin_80px.svg" alt="Linkedin icon" />
 						<p>Linkedin</p>
 					</div>
 				</a>
 
 				<a class="social-links" href="https://stackoverflow.com/users/16669827/ebba?tab=profile" target="_blank">
 					<div class="social-icon-wrapper">
-						<img class="bottom-icons" src="./images/icons/stackoverflow.svg" alt="Stack Overflow icon" />
+						<img class="bottom-icons" src="./images/icons/icon_stack-overflow_80px.svg" alt="Stack Overflow icon" />
 						<p>Stack Overflow</p>
 					</div>
 				</a>
 
 				<a class="social-links" href="https://github.com/ebbadelsol" target="_blank">
 					<div class="social-icon-wrapper">
-						<img class="bottom-icons" src="./images/icons/github.svg" alt="Github icon" />
+						<img class="bottom-icons" src="./images/icons/icon_github_80px.svg" alt="Github icon" />
 						<p>GitHub</p>
 					</div>
 				</a>
