desktop version and responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -32,8 +32,10 @@
 			</div>
 			<img class="hero-image" src="https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2666&q=80" alt="Header image" />
 			<section class="top-section container">
-				<p class="kicker enhanced">Portfolio: <span class="bold">Ebba Delsol</span></p>
-				<h1 class="big-heading">frontend developer</h1>
+				<div class="top-text-container">
+					<p class="kicker enhanced">Portfolio: <span class="bold">Ebba Delsol</span></p>
+					<h1 class="big-heading">frontend developer</h1>
+				</div>
 				<div class="profile-container">
 					<img class="profile-picture" src="./images/portrait.jpg" alt="Profile picture" />
 				</div>
@@ -311,21 +313,21 @@
 				<a class="social-links" href="https://www.linkedin.com/in/ebba-delsol/" target="_blank">
 					<div class="social-icon-wrapper">
 						<img class="bottom-icons" src="./images/icons/icon_linkedin_80px.svg" alt="Linkedin icon" />
-						<p class="highlighted enhanced bold">Linkedin</p>
+						<p class="skill-title highlighted enhanced bold">Linkedin</p>
 					</div>
 				</a>
 
 				<a class="social-links" href="https://stackoverflow.com/users/16669827/ebba?tab=profile" target="_blank">
 					<div class="social-icon-wrapper">
 						<img class="bottom-icons" src="./images/icons/icon_stack-overflow_80px.svg" alt="Stack Overflow icon" />
-						<p class="highlighted enhanced bold">Stack Overflow</p>
+						<p class="skill-title highlighted enhanced bold">Stack Overflow</p>
 					</div>
 				</a>
 
 				<a class="social-links" href="https://github.com/ebbadelsol" target="_blank">
 					<div class="social-icon-wrapper">
 						<img class="bottom-icons" src="./images/icons/icon_github_80px.svg" alt="Github icon" />
-						<p class="highlighted enhanced bold">GitHub</p>
+						<p class="skill-title highlighted enhanced bold">GitHub</p>
 					</div>
 				</a>
 			</div>
