small responsiv changes

--- a/code/index.html
+++ b/code/index.html
@@ -337,7 +337,7 @@
 
 		<section class="contact">
 			<footer class="container">
-				<h3 class="sub-heading enhanced bold">Contact</h3>
+				<h3 class="contact-heading sub-heading enhanced bold">Contact</h3>
 				<div class="contact-info">
 					<p>Ebba Delsol</p>
 					<p>ebba.delsol@gmail.com</p>
