Changing hero image, adding some hover effects and minor styling changes

--- a/code/index.html
+++ b/code/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<img
 				class="hero-image"
-				src="https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2666&q=80"
+				src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80"
 				alt="Header image"
 			/>
 			<section class="top-section container">
@@ -58,7 +58,7 @@
 					<p class="kicker enhanced">
 						Portfolio: <span class="bold">Ebba Delsol</span>
 					</p>
-					<h1 class="big-heading">frontend developer</h1>
+					<h1 class="big-heading">Frontend developer</h1>
 				</div>
 				<div class="profile-container">
 					<img
