Adding project images and descriptions, adding an overlay to the project images

--- a/code/index.html
+++ b/code/index.html
@@ -110,23 +110,57 @@
 			<div class="project-wrapper">
 				<article class="main-project">
 					<div class="project-img-container">
-						<a href="#" target="_blank">
-							<h4 class="image-title enhanced bold">Travelbot</h4>
+						<a href="https://add-your-todo.netlify.app/" target="_blank">
+							<div class="overlay">
+								<h4 class="image-title enhanced bold">Todo List</h4>
+							</div>
 							<img
 								class="project-image"
-								src="https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3474&q=80"
-								alt="Project image"
+								src="./images/projects/Project_Todo_2500x1500.jpg"
+								alt="Project Todo"
 							/>
 						</a>
 					</div>
-					<a href="#" target="_blank">
+					<a href="https://add-your-todo.netlify.app/" target="_blank">
+						<div class="text-container">
+							<h5 class="project-title enhanced highlighted bold">Todo List</h5>
+							<p class="info-text">
+								A ”to do” app built with Redux, React and using styled
+								components. The app keeps track of all the things you need to
+								do.
+							</p>
+						</div>
+						<div class="tag-wrapper">
+							<p>HTML5</p>
+							<p>CSS3</p>
+							<p>JavaScript ES6</p>
+							<p>Redux</p>
+							<p>React</p>
+						</div>
+					</a>
+				</article>
+
+				<article class="main-project">
+					<div class="project-img-container">
+						<a href="https://happy-tweets.netlify.app/" target="_blank">
+							<div class="overlay">
+								<h4 class="image-title enhanced bold">Happy Thoughts</h4>
+							</div>
+							<img
+								class="project-image"
+								src="./images/projects/Project_Happy_Thoughts_2500x1500.jpg"
+								alt="Project Happy Thoughts"
+							/>
+						</a>
+					</div>
+					<a href="https://happy-tweets.netlify.app/" target="_blank">
 						<div class="text-container">
 							<h5 class="project-title enhanced highlighted bold">
-								Chat bot built in javascript
+								Happy Thoughts
 							</h5>
 							<p class="info-text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-								inventore aperiam illo.
+								A Twitter-like website built with React where a user can both
+								post a thought and see others' thoughts.
 							</p>
 						</div>
 						<div class="tag-wrapper">
@@ -141,23 +175,24 @@
 
 				<article class="main-project">
 					<div class="project-img-container">
-						<a href="#" target="_blank">
-							<h4 class="image-title enhanced bold">Travelbot</h4>
+						<a href="https://spotify-new-releases.netlify.app" target="_blank">
+							<div class="overlay">
+								<h4 class="image-title enhanced bold">Music Releases</h4>
+							</div>
 							<img
 								class="project-image"
-								src="https://images.unsplash.com/photo-1618004912476-29818d81ae2e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80"
-								alt="Project image"
+								src="./images/projects/Project_Music_Site_2500x1500.jpg"
+								alt="Project Music Releases"
 							/>
 						</a>
 					</div>
-					<a href="#" target="_blank">
+					<a href="https://spotify-new-releases.netlify.app" target="_blank">
 						<div class="text-container">
 							<h5 class="project-title enhanced highlighted bold">
-								Chat bot built in javascript
+								Music Releases
 							</h5>
 							<p class="info-text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-								inventore aperiam illo.
+								Pair programming project built with React, using Spotify API.
 							</p>
 						</div>
 						<div class="tag-wrapper">
@@ -172,61 +207,29 @@
 
 				<article class="main-project">
 					<div class="project-img-container">
-						<a href="#" target="_blank">
-							<h4 class="image-title enhanced bold">Travelbot</h4>
+						<a href="https://hiring-survey.netlify.app/" target="_blank">
+							<div class="overlay">
+								<h4 class="image-title enhanced bold">My Survey</h4>
+							</div>
 							<img
 								class="project-image"
-								src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3732&q=80"
-								alt="Project image"
+								src="./images/projects/Project_Survey_2500x1500.jpg"
+								alt="Project My Survey"
 							/>
 						</a>
 					</div>
-					<a href="#" target="_blank">
+					<a href="https://hiring-survey.netlify.app/" target="_blank">
 						<div class="text-container">
-							<h5 class="project-title enhanced highlighted bold">
-								Chat bot built in javascript
-							</h5>
+							<h5 class="project-title enhanced highlighted bold">My Survey</h5>
 							<p class="info-text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-								inventore aperiam illo.
+								A short survey that highlights why you should hire me as a
+								developer. Styled for mobile.
 							</p>
 						</div>
 						<div class="tag-wrapper">
 							<p>HTML5</p>
 							<p>CSS3</p>
 							<p>JavaScript ES6</p>
-							<p>APIs</p>
-							<p>React</p>
-						</div>
-					</a>
-				</article>
-
-				<article class="main-project">
-					<div class="project-img-container">
-						<a href="#" target="_blank">
-							<h4 class="image-title enhanced bold">Travelbot</h4>
-							<img
-								class="project-image"
-								src="https://images.unsplash.com/photo-1618472609777-b038f1f04b8d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3464&q=80"
-								alt="Project image"
-							/>
-						</a>
-					</div>
-					<a href="#" target="_blank">
-						<div class="text-container">
-							<h5 class="project-title enhanced highlighted bold">
-								Chat bot built in javascript
-							</h5>
-							<p class="info-text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-								inventore aperiam illo.
-							</p>
-						</div>
-						<div class="tag-wrapper">
-							<p>HTML5</p>
-							<p>CSS3</p>
-							<p>JavaScript ES6</p>
-							<p>APIs</p>
 							<p>React</p>
 						</div>
 					</a>
