text-changes and margins

--- a/code/index.html
+++ b/code/index.html
@@ -75,7 +75,7 @@
 		<section class="summery-section container">
 			<p class="intro-text">
 				<span class="line"></span><span class="dot"></span>I’m a Frontend
-				Developer with a curios mind who loves problem solving. I strive to
+				Developer with a curious mind who loves problem solving. I strive to
 				always learning new things and deepen my knowledge in programming. I
 				have a bachelor degree in Graphic Design and Communication and have been
 				working as a Graphic Designer for more than 5 years including experience
