--- a/code/index.html
+++ b/code/index.html
@@ -320,6 +320,7 @@
 		</section>
 
 		<!-- Reflection Section -->
+		<!-- This section only exist in this branch -->
 
 		<section class="reflect-section container">
 			<h2 class="section-heading enhanced bold"><span>My thoughts</span></h2>
