Added more project descriptions

--- a/code/index.html
+++ b/code/index.html
@@ -125,9 +125,8 @@
 						<div class="text-container">
 							<h5 class="project-title enhanced highlighted bold">Todo List</h5>
 							<p class="info-text">
-								A ”to do” app built with Redux, React and using styled
-								components. The app keeps track of all the things you need to
-								do.
+								A ”to do” app built with Redux, React and styled components. The
+								app keeps track of all the things you need to do.
 							</p>
 						</div>
 						<div class="tag-wrapper">
@@ -201,6 +200,7 @@
 							<p>JavaScript ES6</p>
 							<p>APIs</p>
 							<p>React</p>
+							<p>Pair programming</p>
 						</div>
 					</a>
 				</article>
@@ -243,12 +243,10 @@
 
 				<article class="sub-project">
 					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">
-							Chat bot built in javascript
-						</h5>
+						<h5 class="project-title enhanced highlighted bold">Movies</h5>
 						<p class="info-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-							inventore aperiam illo.
+							Pair programming project showcasing movie releases. A multipage
+							website built with React and fetching from an API.
 						</p>
 					</div>
 					<div class="tag-wrapper">
@@ -257,17 +255,49 @@
 						<p>JavaScript ES6</p>
 						<p>APIs</p>
 						<p>React</p>
+						<p>Pair programming</p>
+					</div>
+				</article>
+
+				<article class="sub-project">
+					<div class="text-container">
+						<h5 class="project-title enhanced highlighted bold">Labyrinth</h5>
+						<p class="info-text">
+							A text maze game built in Redux using thunks.
+						</p>
+					</div>
+					<div class="tag-wrapper">
+						<p>HTML5</p>
+						<p>CSS3</p>
+						<p>JavaScript ES6</p>
+						<p>APIs</p>
+						<p>React</p>
+						<p>Pair programming</p>
+					</div>
+				</article>
+
+				<article class="sub-project">
+					<div class="text-container">
+						<h5 class="project-title enhanced highlighted bold">Guess Who</h5>
+						<p class="info-text">
+							A digital version of the classic board game Guess Who.
+						</p>
+					</div>
+					<div class="tag-wrapper">
+						<p>HTML5</p>
+						<p>CSS3</p>
+						<p>JavaScript ES6</p>
 					</div>
 				</article>
 
 				<article class="sub-project">
 					<div class="text-container">
 						<h5 class="project-title enhanced highlighted bold">
-							Chat bot built in javascript
+							Project Github Tracker
 						</h5>
 						<p class="info-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-							inventore aperiam illo.
+							A website using GitHub API to showcase my own repositories from
+							Technigo Bootcamp.
 						</p>
 					</div>
 					<div class="tag-wrapper">
@@ -275,45 +305,21 @@
 						<p>CSS3</p>
 						<p>JavaScript ES6</p>
 						<p>APIs</p>
-						<p>React</p>
 					</div>
 				</article>
 
 				<article class="sub-project">
 					<div class="text-container">
 						<h5 class="project-title enhanced highlighted bold">
-							Chat bot built in javascript
+							Project Travelbot
 						</h5>
-						<p class="info-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-							inventore aperiam illo.
-						</p>
+						<p class="info-text">...</p>
 					</div>
 					<div class="tag-wrapper">
 						<p>HTML5</p>
 						<p>CSS3</p>
 						<p>JavaScript ES6</p>
-						<p>APIs</p>
-						<p>React</p>
-					</div>
-				</article>
-
-				<article class="sub-project">
-					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">
-							Chat bot built in javascript
-						</h5>
-						<p class="info-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit nobis
-							inventore aperiam illo.
-						</p>
-					</div>
-					<div class="tag-wrapper">
-						<p>HTML5</p>
-						<p>CSS3</p>
-						<p>JavaScript ES6</p>
-						<p>APIs</p>
-						<p>React</p>
+						<p>Pair programming</p>
 					</div>
 				</article>
 			</section>
@@ -384,14 +390,12 @@
 					href="https://stackoverflow.com/users/16669827/ebba?tab=profile"
 					target="_blank"
 				>
-					<!-- <div class="social-icon-wrapper"> -->
 					<img
 						class="bottom-icons"
 						src="./images/icons/icon_stack-overflow_80px.svg"
 						alt="Stack Overflow icon"
 					/>
 					<p class="skill-title highlighted enhanced bold">Stack Overflow</p>
-					<!-- </div> -->
 				</a>
 
 				<a
