Adding more projects, descriptions and links

--- a/code/index.html
+++ b/code/index.html
@@ -130,11 +130,10 @@
 							</p>
 						</div>
 						<div class="tag-wrapper">
-							<p>HTML5</p>
-							<p>CSS3</p>
-							<p>JavaScript ES6</p>
 							<p>Redux</p>
 							<p>React</p>
+							<p>JavaScript ES6</p>
+							<p>Styled Components</p>
 						</div>
 					</a>
 				</article>
@@ -163,11 +162,11 @@
 							</p>
 						</div>
 						<div class="tag-wrapper">
+							<p>React</p>
+							<p>JavaScript ES6</p>
 							<p>HTML5</p>
 							<p>CSS3</p>
-							<p>JavaScript ES6</p>
 							<p>APIs</p>
-							<p>React</p>
 						</div>
 					</a>
 				</article>
@@ -195,11 +194,11 @@
 							</p>
 						</div>
 						<div class="tag-wrapper">
-							<p>HTML5</p>
-							<p>CSS3</p>
+							<p>React</p>
 							<p>JavaScript ES6</p>
 							<p>APIs</p>
-							<p>React</p>
+							<p>HTML5</p>
+							<p>CSS3</p>
 							<p>Pair programming</p>
 						</div>
 					</a>
@@ -227,10 +226,10 @@
 							</p>
 						</div>
 						<div class="tag-wrapper">
+							<p>React</p>
+							<p>JavaScript ES6</p>
 							<p>HTML5</p>
 							<p>CSS3</p>
-							<p>JavaScript ES6</p>
-							<p>React</p>
 						</div>
 					</a>
 				</article>
@@ -242,85 +241,89 @@
 				<h3 class="sub-heading enhanced highlighted bold">More projects</h3>
 
 				<article class="sub-project">
-					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">Movies</h5>
-						<p class="info-text">
-							Pair programming project showcasing movie releases. A multipage
-							website built with React and fetching from an API.
-						</p>
-					</div>
-					<div class="tag-wrapper">
-						<p>HTML5</p>
-						<p>CSS3</p>
-						<p>JavaScript ES6</p>
-						<p>APIs</p>
-						<p>React</p>
-						<p>Pair programming</p>
-					</div>
+					<a href="https://movieseason.netlify.app/" target="_blank">
+						<div class="text-container">
+							<h5 class="project-title enhanced highlighted bold">
+								Movies Site
+							</h5>
+							<p class="info-text">
+								Pair programming project showcasing movie releases. A multipage
+								website built with React and fetching from an API.
+							</p>
+						</div>
+						<div class="tag-wrapper">
+							<p>React</p>
+							<p>JavaScript ES6</p>
+							<p>APIs</p>
+							<p>Styled Components</p>
+							<p>HTML5</p>
+							<p>CSS3</p>
+							<p>Pair programming</p>
+						</div>
+					</a>
 				</article>
 
 				<article class="sub-project">
-					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">Labyrinth</h5>
-						<p class="info-text">
-							A text maze game built in Redux using thunks.
-						</p>
-					</div>
-					<div class="tag-wrapper">
-						<p>HTML5</p>
-						<p>CSS3</p>
-						<p>JavaScript ES6</p>
-						<p>APIs</p>
-						<p>React</p>
-						<p>Pair programming</p>
-					</div>
+					<a href="https://who-is-it.netlify.app/" target="_blank">
+						<div class="text-container">
+							<h5 class="project-title enhanced highlighted bold">Guess Who</h5>
+							<p class="info-text">
+								A digital version of the classic board game Guess Who, created
+								with vanilla Javascript.
+							</p>
+						</div>
+						<div class="tag-wrapper">
+							<p>JavaScript ES6</p>
+							<p>HTML5</p>
+							<p>CSS3</p>
+						</div>
+					</a>
 				</article>
 
 				<article class="sub-project">
-					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">Guess Who</h5>
-						<p class="info-text">
-							A digital version of the classic board game Guess Who.
-						</p>
-					</div>
-					<div class="tag-wrapper">
-						<p>HTML5</p>
-						<p>CSS3</p>
-						<p>JavaScript ES6</p>
-					</div>
+					<a
+						href="https://github-tracker-ebbadelsol.netlify.app/"
+						target="_blank"
+					>
+						<div class="text-container">
+							<h5 class="project-title enhanced highlighted bold">
+								Github Tracker
+							</h5>
+							<p class="info-text">
+								A website using GitHub API to showcase my own repositories from
+								Technigo Bootcamp.
+							</p>
+						</div>
+						<div class="tag-wrapper">
+							<p>JavaScript ES6</p>
+							<p>APIs</p>
+							<p>HTML5</p>
+							<p>CSS3</p>
+						</div>
+					</a>
 				</article>
 
 				<article class="sub-project">
-					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">
-							Project Github Tracker
-						</h5>
-						<p class="info-text">
-							A website using GitHub API to showcase my own repositories from
-							Technigo Bootcamp.
-						</p>
-					</div>
-					<div class="tag-wrapper">
-						<p>HTML5</p>
-						<p>CSS3</p>
-						<p>JavaScript ES6</p>
-						<p>APIs</p>
-					</div>
-				</article>
-
-				<article class="sub-project">
-					<div class="text-container">
-						<h5 class="project-title enhanced highlighted bold">
-							Project Travelbot
-						</h5>
-						<p class="info-text">...</p>
-					</div>
-					<div class="tag-wrapper">
-						<p>HTML5</p>
-						<p>CSS3</p>
-						<p>JavaScript ES6</p>
-						<p>Pair programming</p>
-					</div>
+					<a href="https://game-maze.netlify.app/" target="_blank">
+						<div class="text-container">
+							<h5 class="project-title enhanced highlighted bold">
+								Labyrinth Game
+							</h5>
+							<p class="info-text">
+								A game which allows a user to navigate a maze, in the form of a
+								text-based adventure, provided by a backend. Pair programming
+								project built with Redux and thunks.
+							</p>
+						</div>
+						<div class="tag-wrapper">
+							<p>Redux</p>
+							<p>React</p>
+							<p>Styled Components</p>
+							<p>JavaScript ES6</p>
+							<p>APIs</p>
+							<p>Pair programming</p>
+						</div>
+					</a>
 				</article>
 			</section>
 		</section>
