Changed project survey image

--- a/code/index.html
+++ b/code/index.html
@@ -212,7 +212,7 @@
 							</div>
 							<img
 								class="project-image"
-								src="./images/projects/Project_Survey_2500x1500.jpg"
+								src="./images/projects/Project_Survey_2500x1500_3.jpg"
 								alt="Project My Survey"
 							/>
 						</a>
@@ -311,8 +311,8 @@
 							</h5>
 							<p class="info-text">
 								A game which allows a user to navigate a maze, in the form of a
-								text-based adventure, provided by a backend. Pair programming
-								project built with Redux and thunks.
+								text-based adventure. Pair programming project built with Redux
+								and thunks.
 							</p>
 						</div>
 						<div class="tag-wrapper">
